@@ -7,6 +7,9 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+2012-08-21 01:00  UTC-0300 Luiz Rafael Culik <luiz at xharbour.com.br>
+  * thread.c
+    ! protected _TlsSetValue and 	_TlsGetValue under HB_OS_WIN
 
 2012-08-20 03:57 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
   * contrib/what32/source/_wintree.c
